<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="160dp"
        android:layout_height="350dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/blon_bl03" />

    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:layout_toEndOf="@+id/img_detail"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:maxLines="4"
            android:text="@string/iem_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_detail_iem"
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:layout_margin="8dp"
            android:text="@string/detail"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_detail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/review"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/reviewer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/my_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/reviewer"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_short"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/short_review" />

            <TextView
                android:id="@+id/tv_review_by"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/reviewer" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>